<resources>
    <string name="app_name">Footprints</string>
    <string name="button_location_history_page">Location History</string>
    <string name="button_tracker_page">Tracker</string>
    <string name="location_name">Location Name</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">cancel</string>
    <string name="location_name_label">LocationName:</string>
    <string name="location_address_label">Address:</string>
    <string name="location_longitude_label">Longitude:</string>
    <string name="location_latitude_label">Latitude:</string>
    <string name="purchase_history_label">Purchase History</string>
    <string name="button_scan_receipt">Scan Receipt</string>
    <string name="receipts_scanned_label">Receipts Scanned</string>
    <string name="dashboard">Dashboard</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome</string>
    <string name="receipt_image">Receipt Image</string>
    <string name="total">Total</string>
    <string name="cost">Cost</string>
</resources>